doc: fix site documentation
