# docs/swagger.yaml
@@ -1,4 +1,23 @@
 definitions:
+  auth.LoginInput:
+    description: Login request body
+    properties:
+      password:
+        maxLength: 75
+        type: string
+      username:
+        maxLength: 50
+        type: string
+    required:
+    - password
+    - username
+    type: object
+  auth.LoginResponse:
+    description: Login response body
+    properties:
+      token:
+        type: string
+    type: object
   controllers.HelloworldD:
     properties:
       message:
@@ -25,6 +44,24 @@ definitions:
 info:
   contact: {}
 paths:
+  /auth/login:
+    post:
+      description: Generates a JWT for API usage after login.
+      parameters:
+      - description: Request body
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/auth.LoginInput'
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/auth.LoginResponse'
+      summary: Login to the API
+      tags:
+      - Auth routes
   /ping:
     get:
       consumes:
