# internal/controllers/auth/login.go
@@ -6,11 +6,27 @@ import (
 	"net/http"
 )
 
+// LoginInput model info
+// @Description Login request body
 type LoginInput struct {
 	Username string `json:"username" binding:"required,lte=50"`
 	Password string `json:"password" binding:"required,lte=75"`
 }
 
+// LoginResponse model info
+// @Description Login response body
+type LoginResponse struct {
+	Token string `json:"token"`
+}
+
+// Login godoc
+// @Summary Login to the API
+// @Schemes
+// @Description Generates a JWT for API usage after login.
+// @Tags Auth routes
+// @Success 200 {object} LoginResponse
+// @Param data body LoginInput true "Request body"
+// @Router /auth/login  [post]
 func Login(c *gin.Context) {
 	var input LoginInput
 	if err := c.ShouldBindJSON(&input); err != nil {
